[package]
name = "no_std_dll"
version = "0.1.0"
authors = ["rkr35"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
panic-never = "0.1"
winapi = { version = "0.3", features = [
    "libloaderapi",
    "minwindef",
    "processthreadsapi",
    "synchapi",
    "winnt",
]}