[package]
name = "no_std_dll"
version = "0.1.0"
authors = ["rkr35"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = 'fat'
codegen-units = 1
debug = false

[dependencies]
panic-never = "0.1"
winapi = { version = "0.3", features = [
    "libloaderapi",
    "minwindef",
    "processthreadsapi",
    "winnt",
]}